Fix headshost size on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,3 +64,11 @@ article.load-more-item {
     opacity: 1;
   }
 }
+
+@media (max-width: 769px) {
+  .headshot-image {
+    height: 120px;
+    clip-path: circle(40px at center);
+    border: 1px solid #dbdbdb;
+  }
+}
